feat(*): add autoExpandParent property in Tree

--- a/website/sdds-finportal-docs/docs/components/Tree.mdx
+++ b/website/sdds-finportal-docs/docs/components/Tree.mdx
@@ -256,3 +256,111 @@ type TreeItem = {
         ```
     </TabItem>
 </Tabs>
+
+### Пример с autoExpandParent
+
+Иногда может возникнуть необходимость раскрыть дерево до нужного ключа пробросив только его в поле `expanded`. В стандартном сценарии ничего не произойдет, т.к. вышестоящие уровни будут закрыты.
+Поэтому данное поведение можно реализовать с помощью свойства `autoExpandParent`.
+
+```tsx live
+import React from 'react';
+import { Tree, Button } from '@salutejs/sdds-finportal';
+
+export function App() {
+    const [expanded, setExpanded] = React.useState<React.Key[]>([]);
+    const [autoExpandParent, setAutoExpandParent] = React.useState<boolean>(true);
+
+    const treeData = [
+        {
+            title: 'Основной каталог',
+            key: '0-0',
+            children: [
+                {
+                    title: 'Документы',
+                    key: '0-0-0',
+                    children: [
+                        {
+                            title: 'Отчёты',
+                            key: '0-0-0-0',
+                            disabled: true,
+                        },
+                        {
+                            title: 'Проекты',
+                            key: '0-0-0-1',
+                            children: [
+                                {
+                                    title: 'Проект Альфа',
+                                    key: '0-0-0-1-0',
+                                },
+                                {
+                                    title: 'Проект Бета',
+                                    key: '0-0-0-1-1',
+                                },
+                            ],
+                        },
+                        {
+                            title: 'Категории',
+                            key: '0-0-0-2',
+                            children: [
+                                {
+                                    title: 'Категория Гамма',
+                                    key: '0-0-0-2-0',
+                                },
+                                {
+                                    title: 'Категория Дельта',
+                                    key: '0-0-0-2-1',
+                                },
+                            ],
+                        },
+                    ],
+                },
+                {
+                    title: 'Медиа',
+                    key: '0-0-1',
+                    children: [
+                        {
+                            title: 'Фотографии',
+                            key: '0-0-1-0',
+                        },
+                    ],
+                },
+            ],
+        },
+        {
+            title: 'Корзина',
+            key: '0-1',
+            children: [
+                {
+                    title: 'Удалённые файлы',
+                    key: '0-1-0',
+                },
+            ],
+        },
+    ];
+
+    const handleExpand = (expandedValue) => {
+        setAutoExpandParent(false);
+        setExpanded(expandedValue);
+    };
+
+    return (
+        <div style={{ display: 'flex', gap: '50px' }}>
+            <Button
+                onClick={() => {
+                    setAutoExpandParent(true);
+                    setExpanded(['0-0-0']);
+                }}
+            >
+                Открыть уровень "Документы"
+            </Button>
+
+            <Tree
+                items={treeData}
+                expandedKeys={expanded}
+                onTreeExpand={handleExpand}
+                autoExpandParent={autoExpandParent}
+            />
+        </div>
+    );
+}
+```
