docs: add orientation prop to Segment docs

--- a/packages/plasma-new-hope/src/components/Segment/Segment.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Segment/Segment.template-doc.mdx
@@ -130,7 +130,7 @@ export function App() {
             <>
                 <div>Выбранный элемент: {selectedSegmentItems.join(', ')}</div>
                 <br />
-                <SegmentGroup hasBackground clip={false}>
+                <SegmentGroup orientation="vertical" hasBackground clip={false}>
                     {items.map((_, i) => (
                         <SegmentItem
                             label={`Label ${i}`}
