--- a/website/sdds-scan-docs/docs/components/Segment.mdx
+++ b/website/sdds-scan-docs/docs/components/Segment.mdx
@@ -130,7 +130,7 @@ export function App() {
             <>
                 <div>Выбранный элемент: {selectedSegmentItems.join(', ')}</div>
                 <br />
-                <SegmentGroup hasBackground clip={false}>
+                <SegmentGroup orientation="vertical" hasBackground clip={false}>
                     {items.map((_, i) => (
                         <SegmentItem
                             label={`Label ${i}`}
