feat: update withSkeleton types and docs

--- a/website/plasma-b2c-docs/docs/functions/hocs.mdx
+++ b/website/plasma-b2c-docs/docs/functions/hocs.mdx
@@ -29,7 +29,7 @@ export const Default = () => {
 import React from 'react';
 import { withSkeleton, WithSkeletonProps, Button, ButtonProps } from '@salutejs/plasma-b2c';
 
-const ButtonSkeleton = withSkeleton<ButtonProps & WithSkeletonProps>(Button);
+const ButtonSkeleton = withSkeleton(Button);
 
 export const Default = () => (
     <>
