--- a/website/plasma-ui-docs/docs/functions/hocs.mdx
+++ b/website/plasma-ui-docs/docs/functions/hocs.mdx
@@ -31,7 +31,7 @@ import React from 'react';
 import { Button, ButtonProps } from '@salutejs/plasma-core';
 import { withSkeleton, WithSkeletonProps } from '@salutejs/plasma-ui';
 
-const ButtonSkeleton = withSkeleton<ButtonProps & WithSkeletonProps>(Button);
+const ButtonSkeleton = withSkeleton(Button);
 
 return const Default = () => (
     <>
