feat: update withSkeleton types and docs

--- a/website/plasma-b2c-docs/docs/functions/hocs.mdx
+++ b/website/plasma-b2c-docs/docs/functions/hocs.mdx
@@ -27,7 +27,7 @@ export const Default = () => {
 
 ```tsx
 import React from 'react';
-import { withSkeleton, WithSkeletonProps, Button, ButtonProps } from '@salutejs/plasma-b2c';
+import { withSkeleton, Button, ButtonProps } from '@salutejs/plasma-b2c';
 
 const ButtonSkeleton = withSkeleton(Button);
 
