feat(*): deprecate chip props in TextField

--- a/website/plasma-b2c-docs/docs/components/TextField.mdx
+++ b/website/plasma-b2c-docs/docs/components/TextField.mdx
@@ -39,16 +39,6 @@ export function App() {
 }
 ```
 
-## Клавиатурная навигация
-
-Данный компонент может полностью управляться с помощью клавиатуры, используя следующие клавиши:
--  по нажатию `Tab` фокусируемся на инпуте
--  если enumeratinType=`chip` после ввода текста, по нажатию `Enter`, инпут очистится и появится Chip
--  если введен текст в инпуте по нажатию `ArrowLeft` или `ArrowRight` каретка передвигается по тексту
--  при достижении левой границы текста или отсутствии текста в инпуте, при нажатии `Backspace` удаляем последний Chip, если он есть
--  при достижении левой границы текста или отсутствии текста в инпуте, при нажатии `ArrowLeft` переключаемся на последний Chip, если он есть
--  при фокусе на Chip работает переключение фокуса на другие Chip по нажатию `ArrowLeft`, `ArrowRight`; если же Chip крайний правый, при нажатии `ArrowRight` фокус переходит на инпут
-
 ### Размер поля
 Размер поля задаётся с помощью свойства `size`:
 
@@ -178,7 +168,7 @@ export function App() {
 }
 ```
 
-### Режим ввода
+### Режим ввода (DEPRECATED)
 С помощью свойства `enumerationType` можно вводить элементы как теги. Свойство `chipType` изменяет внешний вид чипа.
 С помощью `chipView` можно задать общий вид Chip. Валидация Chip происходит с помощью функции chipValidator.
 По нажатию Enter, после ввода нужного текста, он преобразуется в Chip.
@@ -189,7 +179,7 @@ import { TextField } from '@salutejs/plasma-b2c';
 
 export function App() {
     const validateChip = (value) => (value === 'Значение 1' ? { view: 'negative' } : {});
-    
+
     return (
         <div>
             <TextField
