--- a/website/sdds-cs-docs/docs/components/TextField.mdx
+++ b/website/sdds-cs-docs/docs/components/TextField.mdx
@@ -142,7 +142,7 @@ export function App() {
 }
 ```
 
-### Режим ввода
+### Режим ввода (DEPRECATED)
 С помощью свойства `enumerationType` можно вводить элементы как теги. Свойство `chipType` изменяет внешний вид чипа.
 По нажатию Enter, после ввода нужного текста, он преобразуется в Chip:
 
