--- a/website/sdds-dfa-docs/docs/components/TextField.mdx
+++ b/website/sdds-dfa-docs/docs/components/TextField.mdx
@@ -38,16 +38,6 @@ export function App() {
 }
 ```
 
-## Клавиатурная навигация
-
-Данный компонент может полностью управляться с помощью клавиатуры, используя следующие клавиши:
--  по нажатию `Tab` фокусируемся на input
--  если enumeratinType=`chip` после ввода текста, по нажатию `Enter`, input очистится и появится Chip
--  если введен текст в input по нажатию `ArrowLeft` или `ArrowRight` каретка передвигается по тексту
--  при достижении левой границы текста или отсутствии текста в input, при нажатии `Backspace` удаляем последний Chip, если он есть
--  при достижении левой границы текста или отсутствии текста в input, при нажатии `ArrowLeft` переключаемся на последний Chip, если он есть
--  при фокусе на Chip работает переключение фокуса на другие Chip по нажатию `ArrowLeft`, `ArrowRight`; если же Chip крайний правый, при нажатии `ArrowRight` фокус переходит на input
-
 ### Размер поля
 Размер поля задаётся с помощью свойства `size`:
 
@@ -192,7 +182,7 @@ export function App() {
 }
 ```
 
-### Режим ввода
+### Режим ввода (DEPRECATED)
 С помощью свойства `enumerationType` можно вводить элементы как теги. Свойство `chipType` изменяет внешний вид чипа.
 С помощью `chipView` можно задать общий вид Chip. Валидация Chip происходит с помощью функции chipValidator.
 По нажатию Enter, после ввода нужного текста, он преобразуется в Chip.
@@ -203,7 +193,7 @@ import { TextField } from '@salutejs/sdds-dfa';
 
 export function App() {
     const validateChip = (value) => (value === 'Значение 1' ? { view: 'negative' } : {});
-    
+
     return (
         <div>
             <TextField
