--- a/packages/plasma-new-hope/src/components/TextField/TextField.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/TextField/TextField.template-doc.mdx
@@ -182,7 +182,7 @@ export function App() {
 }
 ```
 
-### Режим ввода
+### Режим ввода (DEPRECATED)
 С помощью свойства `enumerationType` можно вводить элементы как теги. Свойство `chipType` изменяет внешний вид чипа.
 
 С помощью `chipView` можно задать общий вид `Chip`. Валидация `Chip` происходит с помощью функции `chipValidator`.
@@ -302,14 +302,3 @@ export function App() {
   );
 }
 ```
-
-## Клавиатурная навигация
-
-Данный компонент может полностью управляться с помощью клавиатуры, используя следующие клавиши:
--  по нажатию `Tab` фокусируемся на input
--  если enumeratinType=`chip` после ввода текста, по нажатию `Enter`, input очистится и появится Chip
--  если введен текст в input по нажатию `ArrowLeft` или `ArrowRight` каретка передвигается по тексту
--  при достижении левой границы текста или отсутствии текста в input, при нажатии `Backspace` удаляем последний Chip, если он есть
--  при достижении левой границы текста или отсутствии текста в input, при нажатии `ArrowLeft` переключаемся на последний Chip, если он есть
--  при фокусе на Chip работает переключение фокуса на другие Chip по нажатию `ArrowLeft`, `ArrowRight`; если же Chip крайний правый, при нажатии `ArrowRight` фокус переходит на input
-
