--- a/website/plasma-web-docs/docs/components/NavigationDrawer.mdx
+++ b/website/plasma-web-docs/docs/components/NavigationDrawer.mdx
@@ -41,6 +41,7 @@ NawigationDrawer содержит следующие параметры:
 Каждый элемент меню может содержать:
 - `label` Текст
 - `icon` Иконку (при включенном `withContentLeft`)
+- `contentLeft` Контент слева (вместо иконки, при включенном `withContentLeft`)
 - `counter` Счетчик
 - `hasIndicator` Индикатор
 - `action` Действие (функция обратного вызова или URL для перехода)
