feat(): fix web storybook

--- a/website/plasma-web-docs/docs/components/NavigationDrawer.mdx
+++ b/website/plasma-web-docs/docs/components/NavigationDrawer.mdx
@@ -52,8 +52,8 @@ NawigationDrawer содержит следующие параметры:
 
 ```tsx live
 import React, { useState } from 'react';
-import { NavigationDrawer } from '@salutejs/{{ package }}';
-import { IconBlankOutline, IconSettingsFill, IconHomeAltFill, IconLogout, IconStacksOutline } from '@salutejs/{{ package }}';
+import { NavigationDrawer } from '@salutejs/plasma-web';
+import { IconBlankOutline, IconSettingsFill, IconHomeAltFill, IconLogout, IconStacksOutline } from '@salutejs/plasma-icons';
 
 export function App() {
     const [isOpen, setIsOpen] = useState(true);
@@ -123,8 +123,8 @@ export function App() {
 
 ```tsx live
 import React, { useState } from 'react';
-import { NavigationDrawer } from '@salutejs/{{ package }}';
-import { IconBlankOutline } from '@salutejs/{{ package }}';
+import { NavigationDrawer } from '@salutejs/plasma-web';
+import { IconBlankOutline } from '@salutejs/plasma-icons';
 
 export function App() {
     const [isOpen, setIsOpen] = useState(false);
@@ -173,8 +173,8 @@ export function App() {
 
 ```tsx live
 import React, { useState, useRef, useEffect } from 'react';
-import { NavigationDrawer } from '@salutejs/{{ package }}';
-import { IconBlankOutline } from '@salutejs/{{ package }}';
+import { NavigationDrawer } from '@salutejs/plasma-web';
+import { IconBlankOutline } from '@salutejs/plasma-icons';
 
 export function App() {
     const [isOpen, setIsOpen] = useState(false);
