docs(*): add example with clear logic [Autocomplete] [PLASMA-5199]

--- a/website/plasma-b2c-docs/docs/components/Autocomplete.mdx
+++ b/website/plasma-b2c-docs/docs/components/Autocomplete.mdx
@@ -7,6 +7,8 @@ import { PropsTable, Description, StorybookLink } from '@site/src/components';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
+import AutocompleteExampleClear from '../_examples/_autocomplete/_autocomplete-clear-example.mdx'
+
 # Autocomplete
 Поле ввода с подсказками в выпадающем списке.
 
@@ -528,6 +530,9 @@ type SuggestionItem = {
             );
         }
         ```
+    </TabItem>
+    <TabItem value="example clear" label="Clear input">
+        <AutocompleteExampleClear />
     </TabItem>
 </Tabs>
 
