feat(): fix scrollbar and storybook

--- a/packages/plasma-new-hope/src/components/NavigationDrawer/NavigationDrawer.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/NavigationDrawer/NavigationDrawer.template-doc.mdx
@@ -32,9 +32,8 @@ NawigationDrawer содержит следующие параметры:
 
 Меню состоит из секций, каждая из которых может содержать:
 - `label` Заголовок секции (опционально)
+- `hasDivider` Отображать ли разделитель. По умолчанию `false`. Разделитель отображается, только если не указан заголовок
 - `items` Список элементов меню
-
-Если заголовок секции не указан, вместо него будет отображен разделитель.
 
 ### Элементы меню
 
